--- a/styles/architect.css
+++ b/styles/architect.css
@@ -8,7 +8,7 @@
 
 header {
     background: rgba(255, 144, 14, 0.10);
-    padding: 50px 240px;
+    padding: 50px 220px;
 }
 
 nav {
@@ -40,15 +40,41 @@ nav li a {
     font-size: 2.8rem;
     font-weight: 700;
 }
-.banner-content{
+
+.banner-content {
     max-width: 800px;
     text-align: center;
     margin: 0 auto;
-}.banner-title{
+}
+
+.banner-title {
     font-size: 4rem;
     font-weight: 700;
     color: #131313;
 }
-.banner-description{
+
+.banner-description {
     color: #727272;
+}
+
+.btn-primary {
+    border-radius: 8px;
+    background: #FF900E;
+    padding: 18px 25px;
+    font-size: 1rem;
+    border: 0px;
+    color: white;
+    cursor: pointer;
+}
+.banner-img{
+    width: 100%;
+}
+
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
 }
